--- a/index.html
+++ b/index.html
@@ -2084,7 +2084,7 @@
                         <h2 class="title">Testimonial</h2>
 
                         <div class="testimonial-card">
-                            <img src="c:\Users\HARSH\Videos\Instagram\IMG_20240726_002110_219.jpg" alt="Gaurav"
+                            <img src="Jerry.jpg" alt="Gaurav"
                                 class="testimonial-banner" width="80" height="80">
 
                             <p class="testimonial-name">Gaurav Fulara</p>
