--- a/index.html
+++ b/index.html
@@ -2087,7 +2087,7 @@
                             <img src="Jerry.jpg" alt="Gaurav"
                                 class="testimonial-banner" width="80" height="80">
 
-                            <p class="testimonial-name">Gaurav Fulara</p>
+                            <p class="testimonial-name">Pawan Kumar</p>
 
                             <p class="testimonial-title">CEO & Founder Invision</p>
 
