--- a/index.html
+++ b/index.html
@@ -2084,10 +2084,10 @@
                         <h2 class="title">Testimonial</h2>
 
                         <div class="testimonial-card">
-                            <img src="Jerry.jpg" alt="Gaurav"
+                            <img src="invisible.jpg" alt="Harsh"
                                 class="testimonial-banner" width="80" height="80">
 
-                            <p class="testimonial-name">Pawan Kumar</p>
+                            <p class="testimonial-name">Harsh Gupta</p>
 
                             <p class="testimonial-title">CEO & Founder Invision</p>
 
